# ralph-meet

./: .env.deployed  .gitignore  .gitmodules  .release-please-manifest.json  ARCHITECTURE.md  CHANGELOG.md  custom-server-entry.ts  custom-worker.ts  doctor.config.json  eslint.config.js  fix-api-response.js  mod_modals.cjs  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  refactor-imports.js  refactor.cjs  release-please-config.json  tsconfig.json  vite.config.ts  vitest.config.ts  wrangler.toml
.agents/react-doctor/: SKILL.md
.github/workflows/: desktop-release.yml  release-please.yml  tag-release.yml
desktop/: DesktopSplash.tsx  README.md  THIRD_PARTY_LICENSES.md  desktop-entry.tsx  index.html  package-lock.json  package.json  styles.css  tsconfig.json  vite.config.ts
desktop/installer/: ActivationManager.cs  App.xaml  App.xaml.cs  DeepLinkRegistration.cs  FileLockDiagnostics.cs  InstallRootLayout.cs  InstallState.cs  InstallerLogger.cs  InstallerLogic.cs  LaunchCurrentVersion.cs  MainWindow.xaml  MainWindow.xaml.cs  installer.csproj
desktop/installer.tests/: ActivationManagerTests.cs  DeepLinkRegistrationTests.cs  InstallStateTests.cs  LaunchCurrentVersionTests.cs  desktop.installer.tests.csproj
desktop/scripts/: build-capture-fork.ps1  build-installer.ps1  dev-deployed.ps1  presentmon-analyze.py  presentmon-capture.ps1  prod-deployed.ps1  profiling-deployed.ps1
desktop/shims/: clerk-tanstack-server.ts  clerk-tanstack.tsx  clerk-themes.ts  tanstack-react-start.ts
desktop/src-tauri/: .gitignore  .taurignore  Cargo.toml  build.rs  cef-app.exe.manifest  tauri.conf.json  tauri.deployed.conf.json
desktop/src-tauri/build_support/: copy_classifier.rs  packaging_guard.rs
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/cef-fork/: Cargo.toml
desktop/src-tauri/cef-fork/src/: string.rs
desktop/src-tauri/cef-fork/src/wrapper/: byte_read_handler.rs  message_router.rs  message_router_utils.rs  mod.rs  resource_manager.rs  stream_resource_handler.rs  zip_archive.rs
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/permissions/: audio-devices.toml  desktop-commands.toml  media-devices.toml
desktop/src-tauri/resources/obs-capture/: ATTRIBUTION.md  PROTOCOL-NOTES.md  README.md  SOURCE-OFFER.md  obs-vulkan32.json  obs-vulkan64.json
desktop/src-tauri/resources/obs-capture/fork/: .gitignore  CMakeLists.txt  README.md
desktop/src-tauri/resources/obs-capture/fork/cmake/: detours.cmake  vulkan-headers.cmake
desktop/src-tauri/resources/obs-capture/fork/plugins/win-capture/graphics-hook/: d3d10-capture.cpp  d3d11-capture.cpp  d3d12-capture.cpp  d3d8-capture.cpp  d3d9-capture.cpp  dxgi-capture.cpp  gl-capture.c  graphics-hook.c  graphics-hook.h  vulkan-capture.c
desktop/src-tauri/resources/obs-capture/fork/shared/obs-hook-config/: graphics-hook-info.h
desktop/src-tauri/src/: app_updates.rs  audio_devices.rs  d3d_device.rs  hardware_encoder.rs  lib.rs  media_devices.rs  native_share.rs  permissions.rs  ring_buffer.rs  screen_capture.rs  tray.rs  wgc_capture.rs  window.rs  window_icon.rs  wmf_encoder.rs
desktop/src-tauri/src/game_capture/: blocklist.rs  dx11.rs  hook_retention.rs  inject.rs  mod.rs  obs_ipc.rs  vulkan_layer.rs
desktop/src-tauri/tests/: blocklist_defaults.rs  edge_first_frame.rs  frame_adapter.rs  hook_detach.rs  hook_exclusive_unavailable.rs  hook_fallback.rs  hook_session_fallback.rs  integration_dx11_hook.rs  integration_game_capture_hook.rs  integration_single_device_stats.rs  prop_capture_mode_selection.proptest-regressions  prop_capture_mode_selection.rs  prop_capture_mode_selection_v2.rs  prop_capture_policy.rs  prop_capture_policy_resolution.rs  prop_completion_ordering.rs  prop_copy_classifier.rs  prop_delivery_rate.rs  prop_encoder_selection.rs  prop_extended_stats_snapshot.rs  prop_fallback_reason.rs  prop_hook_delivery_rate.rs  prop_hook_retention.rs  prop_inject_planning.rs  prop_notify_unavailable.rs  prop_obs_ipc_names.rs  prop_obs_ipc_roundtrip.rs  prop_packaging_guard.rs  prop_ring_exhaustion.rs  prop_ring_no_overwrite.rs  prop_ring_realloc.rs  prop_safety_decision.rs  prop_stats_snapshot.rs  prop_status_snapshot.rs  prop_wgc_retention.rs  smoke_feature_gate.rs  smoke_fork_build_artifacts.rs  smoke_gplv2_materials.rs  smoke_injector_artifacts.rs  smoke_no_calls.rs  (+1 more)
docs/: desktop-app-audit.md  desktop-audit-task-tracker.md  desktop-optimization-execution-plan.md  recovery-refactor-revamp-plan.md  sfu-vc-audit-report.md
docs/plans/: 2026-06-08-desktop-auth-handoff.md
mobile/: index.html  mobile-entry.tsx  package-lock.json  package.json  patch-mobile-fetch.ts  pnpm-lock.yaml  styles.css  tsconfig.json  vite.config.ts
mobile/patches/: @tauri-apps+plugin-http+2.5.7.patch  tauri-plugin-clerk+0.1.0.patch
mobile/shims/: clerk-backend.ts  cloudflare-workers.ts  tanstack-react-start-server.ts  tanstack-react-start.ts  tauri-plugin-noop.ts
mobile/src-tauri/: Cargo.toml  tauri.conf.json
mobile/src-tauri/capabilities/: default.json
mobile/src-tauri/src/: lib.rs
mobile/src-tauri/vendored_crates/tauri-plugin-clerk/: .gitignore  Cargo.toml
mobile/src-tauri/vendored_crates/tauri-plugin-clerk/android/: build.gradle.kts
mobile/src-tauri/vendored_crates/tauri-plugin-clerk/android/src/main/: AndroidManifest.xml
mobile/src-tauri/vendored_crates/tauri-plugin-clerk/dist-js/: index.js
mobile/src-tauri/vendored_crates/tauri-plugin-clerk/guest-js/: patching.ts
mobile/src-tauri/vendored_crates/tauri-plugin-clerk/permissions/: default.toml
mobile/src-tauri/vendored_crates/tauri-plugin-clerk/src/: commands.rs  lib.rs
scripts/: bump-version.mjs  copy-mediapipe.mjs  migrate-bans.js  migrate-roles.js  query-logs.mjs  send-discord-embed-refresh.mjs
src/: cloudflare-workers.d.ts  env.d.ts  middleware.ts  routeTree.gen.ts  router.tsx  styles.css  tauri.d.ts
src/app/: layout.tsx  page.tsx
src/hooks/: useUptime.ts  (+14 more)
worker/: d1_schema.sql  do-entry.ts  meeting-room.test.ts  meeting-room.ts  rate-limiter-do.ts  rate-limiter.test.ts  rate-limiter.ts  voice-room.ts  wrangler.toml
(+540 files in other folders)
