[package]
name = "ralph-meet-desktop"
version = "0.1.0"
description = "Ralph Meet — Real-Time Communication Desktop Client"
authors = ["Jon Titor"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { git = "https://github.com/tauri-apps/tauri", branch = "feat/cef", features = [
] }
dotenvy = "0.15"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
rustls = { version = "0.23", features = ["ring"] }

# ── Tauri (CEF renderer) ────────────────────────────────────────────────
# Points to the feat/cef branch which adds `tauri-runtime-cef`.
# The "cef" feature swaps WebView2/WKWebView for a full Chromium engine,
# giving us native getDisplayMedia, consistent WebRTC, and full DevTools.
tauri = { git = "https://github.com/tauri-apps/tauri", branch = "feat/cef", features = [
    "tray-icon",
    "cef",
] }

# ── Tauri plugins (CEF-compatible branch) ────────────────────────────────
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "feat/cef" }
tauri-plugin-deep-link = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "feat/cef" }
tauri-plugin-shell = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "feat/cef" }
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "feat/cef" }
tauri-plugin-notification = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "feat/cef" }
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "feat/cef" }
tauri-plugin-process = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "feat/cef" }
tauri-plugin-autostart = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "feat/cef" }
tauri-plugin-updater = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "feat/cef" }
windows = { version = "0.61.3", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_Dwm", "Win32_Media", "Win32_Media_MediaFoundation", "Win32_System_Com", "Win32_Graphics_Dxgi", "Win32_Graphics_Direct3D11"] }
tauri-plugin-opener = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "feat/cef" }
openh264 = "0.6.5"

# Note: tauri-plugin-fs is typically a dependency of other plugins.
# If needed explicitly, add it from the same branch.

# ── Screen source enumeration (still useful for custom picker UI) ────────
[dependencies.xcap]
version = "0.4"

[dependencies.crabgrab]
version = "0.4.0"

[dependencies.webrtc]
version = "0.11"

[dependencies.image]
version = "0.25"
default-features = false
features = ["jpeg", "png"]

[dependencies.base64]
version = "0.22"

# ── Async runtime (required by Tauri async commands) ────────────────────
[dependencies.tokio]
version = "1"
features = ["rt-multi-thread"]

[features]
default = ["cef"]
cef = ["tauri/cef"]

# ── Patch: force ALL transitive tauri deps to use the feat/cef branch ────
[patch.crates-io]
tauri = { path = "./tauri-fork/crates/tauri" }
tauri-plugin = { path = "./tauri-fork/crates/tauri-plugin" }
tauri-utils = { path = "./tauri-fork/crates/tauri-utils" }
tauri-runtime = { path = "./tauri-fork/crates/tauri-runtime" }
tauri-build = { path = "./tauri-fork/crates/tauri-build" }
tauri-codegen = { path = "./tauri-fork/crates/tauri-codegen" }
tauri-macros = { path = "./tauri-fork/crates/tauri-macros" }
tauri-runtime-cef = { path = "./tauri-fork/crates/tauri-runtime-cef" }

[patch."https://github.com/tauri-apps/tauri"]
tauri = { path = "./tauri-fork/crates/tauri" }
tauri-plugin = { path = "./tauri-fork/crates/tauri-plugin" }
tauri-utils = { path = "./tauri-fork/crates/tauri-utils" }
tauri-runtime = { path = "./tauri-fork/crates/tauri-runtime" }
tauri-build = { path = "./tauri-fork/crates/tauri-build" }
tauri-codegen = { path = "./tauri-fork/crates/tauri-codegen" }
tauri-macros = { path = "./tauri-fork/crates/tauri-macros" }
tauri-runtime-cef = { path = "./tauri-fork/crates/tauri-runtime-cef" }
