[package]
name = "ralph-meet-desktop"
version = "0.1.0"
description = "Ralph Meet — Real-Time Communication Desktop Client"
authors = ["Jon Titor"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { git = "https://github.com/tauri-apps/tauri", branch = "feat/cef", features = [
] }
dotenvy = "0.15"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
rustls = { version = "0.23", features = ["ring"] }

# ── Tauri (CEF renderer) ────────────────────────────────────────────────
# Points to the feat/cef branch which adds `tauri-runtime-cef`.
# The "cef" feature swaps WebView2/WKWebView for a full Chromium engine,
# giving us native getDisplayMedia, consistent WebRTC, and full DevTools.
tauri = { git = "https://github.com/tauri-apps/tauri", branch = "feat/cef", features = [
    "tray-icon",
    "cef",
    "devtools",
] }

# ── Tauri plugins (CEF-compatible branch) ────────────────────────────────
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "feat/cef" }
tauri-plugin-deep-link = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "feat/cef" }
tauri-plugin-shell = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "feat/cef" }
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "feat/cef" }
tauri-plugin-notification = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "feat/cef" }
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "feat/cef" }
tauri-plugin-process = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "feat/cef" }
tauri-plugin-autostart = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "feat/cef" }
tauri-plugin-updater = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "feat/cef" }
windows = { version = "0.61.3", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_Graphics_Dwm",
    "Win32_Media",
    "Win32_Media_Audio",
    "Win32_Media_MediaFoundation",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_Devices_FunctionDiscovery",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Gdi",
    "Win32_System_WinRT",
    "Win32_System_WinRT_Direct3D11",
    "Win32_System_WinRT_Graphics_Capture",
    "Win32_System_Threading",
    # Bitness detection for cross-bitness injection planning: `IsWow64Process2`
    # lives in Win32_System_Threading but is gated behind this feature because it
    # returns the `IMAGE_FILE_MACHINE` type (and exposes the
    # `IMAGE_FILE_MACHINE_I386`/`IMAGE_FILE_MACHINE_AMD64` constants) defined here.
    # Used by the `game-capture-hook` feature (game_capture/inject.rs).
    "Win32_System_SystemInformation",
    "Win32_Security",
    "Win32_System_Memory",
    # QueryPerformanceCounter for host-side frame timestamps in the OBS IPC
    # reader (game_capture/obs_ipc.rs).
    "Win32_System_Performance",
    "Win32_System_LibraryLoader",
    "Win32_System_Diagnostics_Debug",
    "Graphics",
    "Graphics_Capture",
    "Graphics_DirectX",
    "Graphics_DirectX_Direct3D11",
    "Foundation",
] }
tauri-plugin-opener = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "feat/cef" }
openh264 = { version = "0.6.5", optional = true }
bytes = { version = "1", optional = true }
bytemuck = { version = "1", optional = true }
shiguredo_opus = { version = "2026.1.0", default-features = false, features = ["source-build"], optional = true }
wasapi = { version = "0.23.0", optional = true }

# Note: tauri-plugin-fs is typically a dependency of other plugins.
# If needed explicitly, add it from the same branch.

# ── Screen source enumeration (still useful for custom picker UI) ────────
[dependencies.xcap]
version = "0.4"

[dependencies.crabgrab]
version = "0.4.0"
features = ["bitmap"]
optional = true

[dependencies.webrtc]
version = "0.11"
optional = true

[dependencies.image]
version = "0.25"
default-features = false
features = ["jpeg", "png"]

[dependencies.base64]
version = "0.22"

# ── Async runtime (required by Tauri async commands) ────────────────────
[dependencies.tokio]
version = "1"
features = ["rt-multi-thread"]

[features]
default = ["cef", "native-screen-share"]
cef = ["tauri/cef"]
native-screen-share = ["webrtc", "bytes", "bytemuck", "shiguredo_opus", "wasapi"]
# Universal game-capture hook (Windows-only, default OFF). Additive zero-copy
# fast path on top of the WGC native share; falls back to WGC whenever the hook
# is unavailable. Builds on `native-screen-share`. The reused OBS
# `graphics-hook`/`inject-helper` artifacts are shipped as separate-process
# GPLv2 components and are NOT linked here, so no OBS source is a dependency.
# Bitness detection + process creation rely on the Win32 features enabled above
# (`Win32_System_SystemInformation` for `IsWow64Process2`/`IMAGE_FILE_MACHINE`,
# and `Win32_System_Threading` + `Win32_Security` for `CreateProcessW`).
game-capture-hook = ["native-screen-share"]

# ── Dev-only dependencies (tests/benches; not part of runtime deps) ──────
[dev-dependencies]
proptest = "1"

# ── Patch: force ALL transitive tauri deps to use the feat/cef branch ────
[patch.crates-io]
tauri = { path = "./tauri-fork/crates/tauri" }
tauri-plugin = { path = "./tauri-fork/crates/tauri-plugin" }
tauri-utils = { path = "./tauri-fork/crates/tauri-utils" }
tauri-runtime = { path = "./tauri-fork/crates/tauri-runtime" }
tauri-build = { path = "./tauri-fork/crates/tauri-build" }
tauri-codegen = { path = "./tauri-fork/crates/tauri-codegen" }
tauri-macros = { path = "./tauri-fork/crates/tauri-macros" }
tauri-runtime-cef = { path = "./tauri-fork/crates/tauri-runtime-cef" }

[patch."https://github.com/tauri-apps/tauri"]
tauri = { path = "./tauri-fork/crates/tauri" }
tauri-plugin = { path = "./tauri-fork/crates/tauri-plugin" }
tauri-utils = { path = "./tauri-fork/crates/tauri-utils" }
tauri-runtime = { path = "./tauri-fork/crates/tauri-runtime" }
tauri-build = { path = "./tauri-fork/crates/tauri-build" }
tauri-codegen = { path = "./tauri-fork/crates/tauri-codegen" }
tauri-macros = { path = "./tauri-fork/crates/tauri-macros" }
tauri-runtime-cef = { path = "./tauri-fork/crates/tauri-runtime-cef" }
