[package]
name = "ralph-meet-desktop"
version = "1.13.0"
description = "Ralph Meet — Real-Time Communication Desktop Client"
authors = ["115jon"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { git = "https://github.com/tauri-apps/tauri", branch = "feat/cef", features = [
] }
dotenvy = "0.15"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
thiserror = "2"
rustls = { version = "0.23", features = ["ring"] }

# ── Tauri (CEF renderer) ────────────────────────────────────────────────
# Points to the feat/cef branch which adds `tauri-runtime-cef`.
# The "cef" feature swaps WebView2/WKWebView for a full Chromium engine,
# giving us native getDisplayMedia, consistent WebRTC, and full DevTools.
tauri = { git = "https://github.com/tauri-apps/tauri", branch = "feat/cef", features = [
    "tray-icon",
    "cef",
    "devtools",
] }

# ── Tauri plugins (CEF-compatible branch) ────────────────────────────────
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "feat/cef" }
tauri-plugin-deep-link = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "feat/cef" }
# tauri-plugin-shell removed: profiler showed its IPC invoke handler hit windows_registry on
# every message (13-95% self-time across all threads). External links use tauri-plugin-opener.
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "feat/cef" }
tauri-plugin-notification = { path = "./vendor/tauri-plugin-notification" }
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "feat/cef" }
tauri-plugin-process = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "feat/cef" }
tauri-plugin-autostart = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "feat/cef" }
tauri-plugin-updater = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "feat/cef" }
windows = { version = "0.61.3", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_Graphics_Dwm",
    "Win32_Media",
    "Win32_Media_Audio",
    "Win32_Media_MediaFoundation",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Variant",
    "Win32_Devices_FunctionDiscovery",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Gdi",
    "Win32_System_WinRT",
    "Win32_System_WinRT_Direct3D11",
    "Win32_System_WinRT_Graphics_Capture",
    "Win32_System_Threading",
    # Bitness detection for cross-bitness injection planning: `IsWow64Process2`
    # lives in Win32_System_Threading but is gated behind this feature because it
    # returns the `IMAGE_FILE_MACHINE` type (and exposes the
    # `IMAGE_FILE_MACHINE_I386`/`IMAGE_FILE_MACHINE_AMD64` constants) defined here.
    # Used by the `game-capture-hook` feature (game_capture/inject.rs).
    "Win32_System_SystemInformation",
    "Win32_Security",
    "Win32_System_Memory",
    # Named-pipe server to drain the injected graphics-hook DLL's hlog
    # diagnostics into desktop.log (game_capture/obs_ipc.rs HookLogPipe).
    "Win32_System_Pipes",
    "Win32_Storage_FileSystem",
    # ConnectNamedPipe/ReadFile (overlapped-capable signatures) for the hook
    # log pipe reader live behind Win32_System_IO (game_capture/obs_ipc.rs).
    "Win32_System_IO",
    # Implicit-Vulkan-layer registration under HKCU\SOFTWARE\Khronos\Vulkan
    # \ImplicitLayers so the Vulkan loader activates the graphics-hook layer
    # (game_capture/vulkan_layer.rs).
    "Win32_System_Registry",
    # QueryPerformanceCounter for host-side frame timestamps in the OBS IPC
    # reader (game_capture/obs_ipc.rs).
    "Win32_System_Performance",
    "Win32_System_LibraryLoader",
    "Win32_System_Diagnostics_Debug",
    # Module enumeration (CreateToolhelp32Snapshot/Module32FirstW) to detect a
    # target process's real graphics API (d3d12.dll vs d3d11.dll) so the
    # reported Graphics_API_Backend is truthful (game_capture/inject.rs
    # detect_graphics_api).
    "Win32_System_Diagnostics_ToolHelp",
    "Graphics",
    "Graphics_Capture",
    "Graphics_DirectX",
    "Graphics_DirectX_Direct3D11",
    "Foundation",
] }
windows-core = "0.61.2"
tauri-plugin-opener = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "feat/cef" }
openh264 = { version = "0.6.5", optional = true }
bytes = { version = "1", optional = true }
bytemuck = { version = "1", optional = true }
shiguredo_opus = { version = "2026.1.0", default-features = false, features = ["source-build"], optional = true }
wasapi = { version = "0.23.0", optional = true }

# Note: tauri-plugin-fs is typically a dependency of other plugins.
# If needed explicitly, add it from the same branch.

# ── Screen source enumeration (still useful for custom picker UI) ────────
[dependencies.xcap]
version = "0.4"

[dependencies.crabgrab]
version = "0.4.0"
features = ["bitmap"]
optional = true

[dependencies.webrtc]
version = "0.11"
optional = true

[dependencies.image]
version = "0.25"
default-features = false
features = ["jpeg", "png"]

[dependencies.base64]
version = "0.22"

# ── Async runtime (required by Tauri async commands) ────────────────────
[dependencies.tokio]
version = "1"
features = ["rt-multi-thread"]

[features]
default = ["cef", "native-screen-share"]
cef = ["tauri/cef"]
native-screen-share = ["webrtc", "bytes", "bytemuck", "shiguredo_opus", "wasapi"]
# Universal game-capture hook (Windows-only, default OFF). Additive zero-copy
# fast path on top of the WGC native share; falls back to WGC whenever the hook
# is unavailable. Builds on `native-screen-share`. The reused OBS
# `graphics-hook`/`inject-helper` artifacts are shipped as separate-process
# GPLv2 components and are NOT linked here, so no OBS source is a dependency.
# Bitness detection + process creation rely on the Win32 features enabled above
# (`Win32_System_SystemInformation` for `IsWow64Process2`/`IMAGE_FILE_MACHINE`,
# and `Win32_System_Threading` + `Win32_Security` for `CreateProcessW`).
game-capture-hook = ["native-screen-share"]

# ── Dev-only dependencies (tests/benches; not part of runtime deps) ──────
[dev-dependencies]
proptest = "1"

# ── Profiling build (samply / WPA / perf) ────────────────────────────────
# Inherits full release optimisations (opt-level=3, lto=thin) so the flame
# graph reflects production behaviour, but retains debug symbols so samply
# can resolve function names. Build with:
#   cargo build --manifest-path desktop/src-tauri/Cargo.toml --profile profiling
# Then: samply record ./target/profiling/ralph-meet-desktop
[profile.profiling]
inherits = "release"
debug = true    # keep DWARF / PDB symbols for samply stack unwinding
strip = false   # do NOT strip; samply needs the symbol table
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true

# ── Patch: force ALL transitive tauri deps to use the feat/cef branch ────
[patch.crates-io]
tauri = { path = "./tauri-fork/crates/tauri" }
tauri-plugin = { path = "./tauri-fork/crates/tauri-plugin" }
tauri-utils = { path = "./tauri-fork/crates/tauri-utils" }
tauri-runtime = { path = "./tauri-fork/crates/tauri-runtime" }
tauri-build = { path = "./tauri-fork/crates/tauri-build" }
tauri-codegen = { path = "./tauri-fork/crates/tauri-codegen" }
tauri-macros = { path = "./tauri-fork/crates/tauri-macros" }
tauri-runtime-cef = { path = "./tauri-fork/crates/tauri-runtime-cef" }
# Vendored cef-rs (Apache-2.0/MIT) so we can patch the bindings ourselves: the
# upstream =144.1.0 crate spammed stderr with "Invalid UTF-16 string" for every
# normal empty CEF string. cef-fork/ is the registry source with that fixed (and
# a place to carry any further CEF binding fixes). cef-dll-sys stays from the
# registry. The +144.0.7 build metadata still satisfies the `=144.1.0` req.
cef = { path = "./cef-fork" }

[patch."https://github.com/tauri-apps/tauri"]
tauri = { path = "./tauri-fork/crates/tauri" }
tauri-plugin = { path = "./tauri-fork/crates/tauri-plugin" }
tauri-utils = { path = "./tauri-fork/crates/tauri-utils" }
tauri-runtime = { path = "./tauri-fork/crates/tauri-runtime" }
tauri-build = { path = "./tauri-fork/crates/tauri-build" }
tauri-codegen = { path = "./tauri-fork/crates/tauri-codegen" }
tauri-macros = { path = "./tauri-fork/crates/tauri-macros" }
tauri-runtime-cef = { path = "./tauri-fork/crates/tauri-runtime-cef" }
